@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19960113
+MANIFEST for ded, version t19960125
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
